--- a/css/style.css
+++ b/css/style.css
@@ -968,18 +968,63 @@ a {
     border: solid 2px #2D3651;
     background-color: #D66926;
   }
-  .section3-form {
+  .section2-block {
+    padding: 100px 10px 100px 10px;
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
+  }
+  .section2-block-left {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+  .section2-block-left h2 {
+    font-family: Roboto Slab;
+    width: 213px;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
+    color: #2D3651;
+  }
+  .section2-block-text {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .section2-block-text :nth-child(1)::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: calc(100% - 1px);
+    width: 1px;
+    height: 200px;
+    border-right: solid 1px #707070;
+  }
+  .section2-block-text p {
+    font-family: Roboto;
+    font-size: 16px;
+    position: relative;
+    line-height: 24px;
+    color: #637588;
+  }
+  .section3-form {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
     gap: 5px;
+  }
+  .section3-form input:first-child {
+    width: 674.71px;
   }
   .section3-form input:focus {
     border: solid 2px #FFFFFF;
     outline: none;
   }
   .section3-form input {
-    width: 301.88px;
+    width: 335px;
     height: 60px;
     background: rgba(255, 255, 255, 0.0509803922);
     border-bottom: solid 2px #FFFFFF;
@@ -1017,7 +1062,7 @@ a {
   .section3-form button {
     background: rgba(255, 255, 255, 0.0509803922);
     border-bottom: solid 2px #FFFFFF;
-    width: 301.88px;
+    width: 335px;
     height: 60px;
     font-size: 18px;
     color: #FFFFFF;
@@ -1027,6 +1072,90 @@ a {
   .section3-form button:hover {
     border: solid 2px #FFFFFF;
     outline: none;
+    background-color: #D66926;
+  }
+  .section4-block {
+    padding: 80px 10px 80px 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+  .section4-text h2 {
+    font-family: Roboto Slab;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
+    color: #2D3651;
+  }
+  .section4-posts-grid {
+    padding: 54px 0 20px;
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 16px;
+  }
+  .section4-posts-grid .post:nth-child(1) {
+    grid-column: 1/3;
+  }
+  .section4-posts-grid .post:nth-child(4) {
+    grid-column: 2/4;
+  }
+  .section4-posts-grid .post:nth-child(5) {
+    grid-column: 1/3;
+  }
+  .section4-posts-grid .post:nth-child(6) {
+    grid-column: 3/4;
+  }
+  .section4-posts-grid .post .posts-grid-img {
+    height: 300px;
+  }
+  .section4-posts-grid .post .posts-grid-img img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+  .section4-posts-grid .post .posts-grid-text {
+    height: 270px;
+    padding: 10px 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    background-color: #EEEEEE;
+  }
+  .section4-posts-grid .post h2 {
+    font-family: Roboto Slab;
+    font-size: 18px;
+    text-align: center;
+    line-height: 20px;
+    font-weight: 700;
+    color: #637588;
+  }
+  .section4-posts-grid .post p {
+    font-family: Roboto;
+    font-size: 16px;
+    text-align: center;
+    line-height: 20px;
+    color: #637588;
+  }
+  .section4-button {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+  }
+  .section4-button button {
+    font-family: Roboto;
+    width: 350px;
+    height: 60px;
+    font-size: 18px;
+    color: #FFFFFF;
+    background: rgba(45, 54, 81, 0.8);
+    border: solid 2px #2D3651;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  .section4-button button:hover {
+    border: solid 2px #2D3651;
     background-color: #D66926;
   }
 }
