--- a/css/style.scss
+++ b/css/style.scss
@@ -1084,11 +1084,63 @@ a {
         background-color: $chocolate;
     }
 
-    .section3-form {
+    .section2-block {
+        padding: 100px 10px 100px 10px;
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-content: space-between;
+    }
+
+    .section2-block-left {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .section2-block-left h2 {
+        font-family: Roboto Slab;
+        width: 213px;
+        font-size: 24px;
+        line-height: 32px;
+        font-weight: $fontweight;
+        color: $japaneseindigo;
+    }
+
+    .section2-block-text {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .section2-block-text :nth-child(1)::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: calc(100% - 1px);
+        width: 1px;
+        height: 200px;
+        border-right: solid 1px $darksilver;
+    }
+
+    .section2-block-text p {
+        font-family: Roboto;
+        font-size: 16px;
+        position: relative;
+        line-height: 24px;
+        color: $aurometalsaurus;
+    }
+
+    .section3-form {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
         gap: 5px;
+    }
+
+    .section3-form input:first-child {
+        width: 674.71px;
     }
 
     .section3-form input:focus {
@@ -1097,7 +1149,7 @@ a {
     }
 
     .section3-form input {
-        width: 301.88px;
+        width: 335px;
         height: 60px;
         background: #FFFFFF0D;
         border-bottom: solid 2px $white;
@@ -1142,7 +1194,7 @@ a {
     .section3-form button {
         background: #FFFFFF0D;
         border-bottom: solid 2px $white;
-        width: 301.88px;
+        width: 335px;
         height: 60px;
         font-size: $fontsize;
         color: $white;
@@ -1153,6 +1205,107 @@ a {
     .section3-form button:hover {
         border: solid 2px $white;
         outline: none;
+        background-color: $chocolate;
+    }
+
+    .section4-block {
+        padding: 80px 10px 80px 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    .section4-text h2 {
+        font-family: Roboto Slab;
+        font-size: 24px;
+        line-height: 32px;
+        font-weight: $fontweight;
+        color: $japaneseindigo;
+    }
+
+    .section4-posts-grid {
+        padding: 54px 0 20px;
+        display: grid;
+        grid-template-rows: auto;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 16px;
+
+        .post:nth-child(1) {
+            grid-column: 1 / 3;
+        }
+
+        .post:nth-child(4) {
+            grid-column: 2 / 4;
+        }
+
+        .post:nth-child(5) {
+            grid-column: 1 / 3;
+        }
+
+        .post:nth-child(6) {
+            grid-column: 3 / 4;
+        }
+
+        .post {
+            .posts-grid-img {
+                height: 300px;
+
+                img {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .posts-grid-text {
+                height: 270px;
+                padding: 10px 10px;
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                justify-content: center;
+                background-color: $brightgray;
+            }
+
+            h2 {
+                font-family: Roboto Slab;
+                font-size: $fontsize;
+                text-align: center;
+                line-height: 20px;
+                font-weight: $fontweight;
+                color: $aurometalsaurus;
+            }
+
+            p {
+                font-family: Roboto;
+                font-size: 16px;
+                text-align: center;
+                line-height: 20px;
+                color: $aurometalsaurus;
+            }
+        }
+    }
+
+    .section4-button {
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .section4-button button {
+        font-family: Roboto;
+        width: 350px;
+        height: 60px;
+        font-size: $fontsize;
+        color: $white;
+        background: #2D3651CC;
+        border: solid 2px $japaneseindigo;
+        cursor: pointer;
+        transition: 0.3s;
+    }
+
+    .section4-button button:hover {
+        border: solid 2px $japaneseindigo;
         background-color: $chocolate;
     }
 }
