--- a/css/style.scss
+++ b/css/style.scss
@@ -1365,7 +1365,7 @@ a {
     .mobile-navigation {
         display: block;
         position: relative;
-        left: calc(38% - 216px);
+        left: calc(55% - 216px);
     }
 
     .nav-mobile {
@@ -1448,7 +1448,7 @@ a {
     }
 
     .section2-header {
-        padding: 45px 10px 45px 10px;
+        padding: 0 10px 16px 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -1566,8 +1566,8 @@ a {
 
     .section1-block-button button {
         font-family: Roboto;
-        width: 490px;
-        height: 60px;
+        width: 350px;
+        height: 40px;
         font-size: $fontsize;
         color: $white;
         background: #2D3651CC;
@@ -1634,6 +1634,7 @@ a {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         gap: 5px;
     }
 
@@ -1643,7 +1644,7 @@ a {
     }
 
     .section3-form input {
-        width: 525px;
+        width: 350px;
         height: 60px;
         background: #FFFFFF0D;
         border-bottom: solid 2px $white;
@@ -1688,8 +1689,8 @@ a {
     .section3-form button {
         background: #FFFFFF0D;
         border-bottom: solid 2px $white;
-        width: 525px;
-        height: 60px;
+        width: 350px;
+        height: 40px;
         font-size: $fontsize;
         color: $white;
         transition: 0.3s;
@@ -1725,7 +1726,7 @@ a {
         grid-template-columns: 1fr;
         gap: 16px;
         height: 100%;
-        width: 492px;
+        width: 350px;
         margin: 0 auto;
         outline: 2px solid red;
 
@@ -1763,7 +1764,7 @@ a {
         .post {
             .posts-grid-img {
                 height: 300px;
-                width: 492px;
+                width: 350px;
 
                 img {
                     height: 100%;
@@ -1773,7 +1774,7 @@ a {
             }
 
             .posts-grid-text {
-                width: 492px;
+                width: 350px;
                 height: 270px;
                 padding: 10px 10px;
                 display: flex;
