--- a/css/style.scss
+++ b/css/style.scss
@@ -738,6 +738,7 @@ a {
     span:last-child {
         font-family: Roboto;
         font-size: 11px;
+        text-align: center;
         line-height: 20px;
         font-weight: $fontweight;
         color: $white;
@@ -748,7 +749,7 @@ a {
         width: 75px;
         height: 2px;
         bottom: 45px;
-        left: 18px;
+        left: 33px;
         background-color: $white;
         position: absolute;
     }
@@ -757,6 +758,7 @@ a {
         position: relative;
         font-family: Roboto;
         font-size: 16px;
+        text-align: center;
         line-height: 20px;
         font-weight: 100;
         color: $aurometalsaurus;
@@ -1375,12 +1377,11 @@ a {
     }
 
     .nav-mobile-descriptions {
-        width: 100px;
+        width: 160px;
         display: flex;
         flex-wrap: wrap;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: space-around;
+        flex-direction: row;
+        justify-content: space-evenly;
         gap: 8%;
         line-height: 30px;
     }
@@ -1461,7 +1462,7 @@ a {
         text-align: center;
         line-height: 40px;
         font-family: 'Roboto Slab';
-        font-size: 30px;
+        font-size: 25px;
         font-weight: 300;
         color: $white;
         animation: hiden5 2s ease forwards;
@@ -1486,8 +1487,8 @@ a {
     }
 
     .section2-header-button button {
-        width: 170px;
-        height: 40px;
+        width: 150px;
+        height: 35px;
         font-size: $fontsize;
         line-height: 21.09px;
         color: $white;
