--- a/css/style.scss
+++ b/css/style.scss
@@ -1341,6 +1341,10 @@ a {
         align-items: center;
     }
 
+    .section1-logo img{
+        width: 100px;
+    }
+
     .section1-logo {
         transform: translateX(-100px);
         animation: hiden1 2s ease forwards;
@@ -1377,12 +1381,12 @@ a {
     }
 
     .nav-mobile-descriptions {
-        width: 160px;
+        width: 222px;
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
         justify-content: space-evenly;
-        gap: 8%;
+        gap: 5%;
         line-height: 30px;
     }
 
