responsev for phone,done

--- a/css/style.css
+++ b/css/style.css
@@ -360,6 +360,7 @@ a {
   align-items: center;
   position: relative;
   transition: 0.3s;
+  background-size: cover;
 }
 .grid-container div h2 {
   font-family: Roboto;
@@ -1169,6 +1170,12 @@ a {
   }
 }
 @media (min-width: 320px) and (max-width: 599px) {
+  header {
+    background-image: url(../images/header-block.png);
+    object-fit: cover;
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
   .bg-opacity {
     background-color: rgba(68, 89, 110, 0.1019607843);
   }
